# plover-magpie

./: setup.cfg
magpielib/: __init__.py  convert.py
plover_magpie/: system.py
plover_magpie/dictionaries/: latin.py  shavian.py
