[metadata]
name = plover-magpie
version = 1.0
description = Plover plugin for Magpie steno theory
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev10
packages =
  magpielib
  plover_magpie

[options.entry_points]
plover.system =
  Shavian Magpie = plover_magpie.system
